# AEGIS

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  Untitled  aegis-config.yaml  deny.toml  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  go.work  justfile  mkdocs.yml  requirements-docs.txt
.cursor/skills/: docs-components  docs-rsc-sandpack  docs-sandpack  docs-voice  docs-writer-blog  docs-writer-learn  (+10 more)
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
aegis-branding/: brand-guide.md  guidelines.md  package-lock.json  package.json
aegis-dashboard/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
aegis-gateway/: .air.toml  Makefile  README.md  doc.go  go.mod  go.sum  security.yaml
aegis-llm-proxy/: .dockerignore  Dockerfile  config.example.yaml  docker-compose.example.yml  go.mod  go.sum
aegis-policy/: go.mod
assets/: brand-guide.md
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: macro_load.rs  micro_anonymize.rs  micro_ffi_json.rs  micro_pipeline.rs  micro_recognizers.rs
benchmarks/scripts/: generate_report.py  hf_aegis_once.sh  hyperfine_cli.sh  requirements-bench.txt  run_presidio_compare.py
benchmarks/src/: lib.rs
crates/aegis-anonymize/: Cargo.toml
crates/aegis-anonymize/data/: de_firstnames_female.json  de_firstnames_male.json  de_lastnames.json  es_firstnames_female.json  es_firstnames_male.json  es_lastnames.json  fr_firstnames_female.json  fr_firstnames_male.json  fr_lastnames.json  it_firstnames_female.json  it_firstnames_male.json  it_lastnames.json  nl_firstnames_female.json  nl_firstnames_male.json  nl_lastnames.json  pl_firstnames_female.json  pl_firstnames_male.json  pl_lastnames.json  pt_firstnames_female.json  pt_firstnames_male.json  pt_lastnames.json
crates/aegis-anonymize/profiles/: de.yaml  es.yaml  fr.yaml  it.yaml  nl.yaml
crates/aegis-anonymize/src/: encrypt.rs  engine.rs  error.rs  ff3_1.rs  fpe_op.rs  hash_op.rs  lib.rs  mask.rs  pseudonymize.rs  redact.rs  replace.rs  synthetic.rs  types.rs
crates/aegis-anonymize/tests/: synthetic_i18n.rs
crates/aegis-cli/: Cargo.toml
crates/aegis-cli/src/: main.rs  sarif.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/benches/: pipeline.rs
crates/aegis-core/src/: anonymizer.rs  config.rs  engine.rs  entity.rs  error.rs  ffi.rs  lib.rs  recognizer.rs  registry.rs
crates/aegis-core/src/config/: engine_yaml.rs
crates/aegis-core/src/context/: context-rules.yaml  lemma.rs  mod.rs  quasi_id.rs  rules.rs  scorer.rs
crates/aegis-core/src/pipeline/: config.rs  detection.rs  fusion.rs  mod.rs  ner.rs  trace.rs
crates/aegis-core/tests/: analyzer_engine_integration.rs  pipeline_integration.rs
crates/aegis-ffi/: Cargo.toml  cbindgen.toml
crates/aegis-ffi/include/: aegis.h
crates/aegis-ffi/src/: lib.rs  nodejs_shim.rs  python_shim.rs
crates/aegis-fpe/: Cargo.toml
crates/aegis-fpe/src/: lib.rs
crates/aegis-ner/: Cargo.toml
crates/aegis-ner-training/: Cargo.toml
crates/aegis-ner-training/src/: lib.rs
crates/aegis-ner/src/: config.rs  engine.rs  error.rs  lib.rs  models.rs  postprocess.rs  prediction.rs  recognizer_adapter.rs
crates/aegis-regex/: Cargo.toml
crates/aegis-regex/benches/: financial.rs  regex_scan.rs
crates/aegis-regex/src/: context_lexicon.rs  credit_card.rs  crypto_wallet.rs  date.rs  defaults.rs  email.rs  ip_address.rs  lib.rs  multi_pattern.rs  pattern.rs  phone.rs  static_regex.rs  url_recognizer.rs  utf8_window.rs  validation.rs
crates/aegis-regex/src/recognizers/: mod.rs
crates/aegis-regex/src/recognizers/eu/: all_eu_recognizers.rs  eu_address.rs  eu_health.rs  eu_phone.rs  gdpr_sensitive.rs  license_plate.rs  mod.rs  quasi_identifiers.rs
crates/aegis-regex/src/recognizers/financial/: bic.rs  common.rs  eu_credit_card.rs  fr_ids.rs  iban.rs  mod.rs  vat.rs
crates/aegis-regex/src/recognizers/national_id/: be.rs  composite.rs  de.rs  es.rs  eu_common.rs  fr.rs  it.rs  mod.rs  nl.rs  pl.rs  pt.rs
crates/aegis-regex/tests/: perf_smoke.rs  recognizer_credit_card_suite.rs  recognizer_email_suite.rs  recognizer_phone_suite.rs
datasets/: .gitignore  Makefile  README.md  benchmark_vs_presidio.py  generate_dataset.py  requirements.txt
docker/: Dockerfile.core  Dockerfile.dashboard  Dockerfile.dev.dashboard  Dockerfile.dev.gateway  Dockerfile.dev.rust  Dockerfile.gateway  Dockerfile.training
examples/: README.md
landing/: README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-gateway-ffi.sh  cosign-verify-aegis-cli.sh  fetch-zoka-onnx-from-ci.sh  generate-sbom.sh  release-sign-cosign.sh
sdk-java/: README.md  pom.xml
sdk-java/aegis-jni-native/: Cargo.toml
sdk-java/aegis-jni-native/src/: lib.rs
sdk-nodejs/: .gitignore  Cargo.toml  README.md  build.rs  index.ts  package-lock.json  package.json  tsconfig.json
sdk-nodejs/examples/: express-middleware.ts  fastify-plugin.ts  next-api-route.ts
sdk-nodejs/src/: lib.rs
sdk-python/: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
sdk-python/aegis/: __init__.py  engine.py  langchain_tool.py
sdk-python/aegis/integrations/: __init__.py  langchain.py  llamaindex.py
sdk-python/examples/: batch_processing.py  custom_recognizer.py  langchain_guard.py  pandas_integration.py  quickstart.py
sdk-python/examples/integrations/: agent_db_aegis.py  chatbot_langchain_aegis.py  ingest_llamaindex_aegis.py  rag_langchain_aegis.py
sdk-python/src/: lib.rs
sdk-python/tests/: test_bench_presidio.py  test_engine.py  test_pandas.py
tests/: README.md
training/: README.md  benchmark_presidio_ner.py  dataset_builder.py  ensure_hf_datasets.py  evaluate.py  export_onnx.py  hf_tokenizer_utils.py  import_hf_external_pii.py  jsonl_to_hf_dataset.py  merge_hf_datasets.py  ner_span_iob.py  onnx_ner_infer.py  push_hf_model.py  requirements-ci.txt  requirements.txt  train_ner.py
(+444 files in other folders)
