# AEGIS — zokastech.fr — Apache-2.0 / MIT
# Advanced European Guardian for Information Security — workspace racine

[workspace]
resolver = "2"
members = [
    "benchmarks",
    "crates/aegis-core",
    "crates/aegis-regex",
    "crates/aegis-ner",
    "crates/aegis-anonymize",
    "crates/aegis-fpe",
    "crates/aegis-ffi",
    "crates/aegis-cli",
]
exclude = [
    "sdk-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["zokastech <https://zokastech.fr>"]
repository = "https://github.com/zokastech/aegis"
homepage = "https://zokastech.fr"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
regex = "1.11"
aho-corasick = "1.1"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
metrics = "0.24"
ctor = "0.2"
proptest = "1.5"
criterion = "0.5"
libc = "0.2"
# RUSTSEC-2025-0020 : pyo3 ≥ 0.24.1 (voir sdk-python/Cargo.toml)
pyo3 = { version = "0.24.2", features = ["auto-initialize"] }
