# AEGIS — zokastech.fr — Apache-2.0 / MIT

[package]
name = "aegis-cli"
description = "CLI AEGIS — scan et anonymisation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis-core = { path = "../aegis-core" }
aegis-regex = { path = "../aegis-regex" }
aegis-anonymize = { path = "../aegis-anonymize" }
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
walkdir = "2"
owo-colors = "4"
