# AEGIS — zokastech.fr — Apache 2.0 / MIT

[package]
name = "aegis-jni"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["zokastech <https://zokastech.fr>"]
repository = "https://github.com/zokastech/aegis"
description = "Pont JNI (cdylib) pour le SDK Java AEGIS"

[lib]
crate-type = ["cdylib"]
name = "aegis_jni"

[dependencies]
jni = "0.21.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aegis-core = { path = "../../crates/aegis-core" }
aegis-anonymize = { path = "../../crates/aegis-anonymize" }
aegis-regex = { path = "../../crates/aegis-regex" }
